<resources>
    <string name="app_name">TierDex</string>
    <string name="action_settings">Settings</string>
    <string name="message_no_permissions">The app cannot work without permissions</string>
    <string name="label_ok">OK</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="add_discovery">Add Discovery</string>
    <string name="animal_list">Animals</string>
    <string name="User1">User_One</string>
    <string name="User2">User_Two</string>
    <string name="animal1">Tiger</string>
    <string name="animal2">Otter</string>
    <string name="camera">Camera</string>
    <string name="TierName">tierName</string>
    <array name="animal3">
        <item id="1" />
        <item class="Mammalia" />
        <item order="Carnivora" />
        <item suborder="Feliformia" />
        <item family="Felidae" />
        <item subfamily="Panthera" />
        <item genus="Pantherinae" />
        <item species="P. leo" />
        <item binomial_name="Panthera leo" />
    </array>

    <string name="permission_required">Camera access is required to display the camera preview.</string>
    <string name="ok">OK</string>
    <string name="permission_granted">Permission is granted. You can use the camera now.</string>
    <string name="grid_animal_name">Name</string>
    <string name="binomial_name">Binomial Name</string>
    <string name="txt_save_button">Save</string>
    <string name="location_of_discovery">Location of Discovery</string>
    <string name="no_location_given">location permission not given</string>
    <string name="add_picture_header">Add Picture</string>
    <string name="add_animal_properties_Header">Add Animal Properties</string>
    <string name="search_for_animal_button_txt">search for Animal</string>
</resources>